ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block2/input.ts.stderr
error: Unexpected character '¬'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/Blocks/parserErrorRecovery_Block2/input.ts:2:5
  |
2 |     ¬
  |     ^

